Fix issue when scrolling up on iphone safari

--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@ body, html {
     z-index: 2;
 }
 #sideNav {
+    display: none;
     position: fixed;
     top: 0;
     right: 0;
